# akai-apc-mini

./: CMakeLists.txt  README.md
src/: main.cpp
